Add Hero Section elements + images folder

--- a/index.html
+++ b/index.html
@@ -16,5 +16,32 @@
     <title>S.I. Dev Portfolio</title>
   </head>
 
-  <body></body>
+  <body class="bg-[#1e1e1e] text-amber-50">
+    <!--HERO SECTION-->
+    <section>
+      <nav>
+        <img src="images/menu-line.svg" />
+      </nav>
+
+      <header>
+        <p>Hello! I'm</p>
+
+        <p>STEFAN IACOB</p>
+
+        <p>Front-End Developer</p>
+      </header>
+
+      <main>
+        <p>I build modern, responsive and clean web interfaces.</p>
+
+        <button>View My Work</button>
+      </main>
+
+      <footer>
+        <p>Scroll</p>
+
+        <img src="images/arrow-down-circle-line.svg" />
+      </footer>
+    </section>
+  </body>
 </html>
