--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <!--HERO SECTION-->
     <section class="h-screen px-[2.19rem]">
       <nav class="h-10">
-        <button class="absolute z-50 top-3.5 right-3.5">
-          <img src="images/menu-line.svg" class="size-4.5" />
+        <button class="absolute z-50 top-4 right-4">
+          <img src="images/menu-line.svg" class="size-5.5" />
         </button>
       </nav>
 
@@ -29,13 +29,13 @@
         <p class="font-content font-light mb-5 text-[0.9rem]">Hello! I'm</p>
 
         <p
-          class="font-title font-black text-[1.8rem] text-[#4a90e2] tracking-widest mb-1.5 text-shadow-md/30 text-shadow-[#4a90e2]"
+          class="font-title font-black text-[2.2rem] text-[#4a90e2] tracking-widest mb-1.5 text-shadow-md/30 text-shadow-[#4a90e2]"
         >
           STEFAN IACOB
         </p>
 
         <p
-          class="font-content font-medium text-[#4a90e2] text-shadow-md/30 text-shadow-[#4a90e2]"
+          class="font-content font-medium text-[1.1rem] text-[#4a90e2] text-shadow-md/30 text-shadow-[#4a90e2]"
         >
           Front-End Developer
         </p>
@@ -57,17 +57,18 @@
 
       <footer>
         <div
-          class="absolute flex flex-col items-center gap-0.5 bottom-3.5 left-[50%] -translate-x-1/2 opacity-20 animate-my-pulse"
+          class="absolute flex flex-col items-center gap-0.5 bottom-25 left-[50%] -translate-x-1/2 opacity-20 animate-my-pulse"
         >
           <p class="text-[0.95rem] italic">Scroll</p>
           <img src="images/arrow-down-circle-line.svg" class="size-4" />
         </div>
       </footer>
+
       <div
         class="size-30 bg-[#4a90e2] rounded-full absolute -top-10 -left-10 blur-3xl opacity-40"
       ></div>
       <div
-        class="size-50 bg-[#4a90e2] rounded-full absolute -bottom-20 -right-20 blur-3xl opacity-25"
+        class="size-50 bg-[#4a90e2] rounded-full absolute -bottom-5 -right-20 blur-3xl opacity-25"
       ></div>
     </section>
   </body>
