Hero Section layout update

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
       <footer>
         <div
-          class="absolute flex flex-col items-center gap-0.5 bottom-25 left-[50%] -translate-x-1/2 opacity-20 animate-my-pulse"
+          class="absolute flex flex-col items-center gap-0.5 bottom-35 left-[50%] -translate-x-1/2 opacity-20 animate-my-pulse"
         >
           <p class="text-[0.95rem] italic">Scroll</p>
           <img src="images/arrow-down-circle-line.svg" class="size-4" />
@@ -68,7 +68,7 @@
         class="size-30 bg-[#4a90e2] rounded-full absolute -top-10 -left-10 blur-3xl opacity-40"
       ></div>
       <div
-        class="size-50 bg-[#4a90e2] rounded-full absolute -bottom-5 -right-20 blur-3xl opacity-25"
+        class="size-50 bg-[#4a90e2] rounded-full absolute bottom-3 -right-20 blur-3xl opacity-25"
       ></div>
     </section>
   </body>
