Resolve the X axis scroll and minors updates

--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
     <title>S.I. Dev. Portfolio</title>
   </head>
 
-  <body class="bg-[#1e1e1e] text-amber-50 relative">
+  <body class="bg-[#1e1e1e] text-amber-50">
     <!--HERO SECTION-->
-    <section class="h-screen px-[2.19rem]">
-      <nav class="h-10">
+    <section class="relative h-screen w-full px-[2.19rem] overflow-hidden">
+      <nav class="h-10 w-full">
         <button class="absolute z-50 top-4 right-4">
           <img src="images/menu-line.svg" class="size-5.5" />
         </button>
       </nav>
 
-      <header class="mb-22 mt-10">
+      <header class="mb-22 mt-10 relative w-full overflow-hidden">
         <p class="font-content font-light mb-5 text-[0.9rem]">Hello! I'm</p>
 
         <p
@@ -43,7 +43,7 @@
 
       <main>
         <p
-          class="font-content font-medium text-[0.8rem] mb-12 tracking-wide leading-[1.7rem]"
+          class="font-content font-medium text-[0.9rem] mb-12 tracking-wide leading-[1.7rem]"
         >
           I build modern, responsive and clean web interfaces.
         </p>
@@ -57,7 +57,7 @@
 
       <footer>
         <div
-          class="absolute flex flex-col items-center gap-0.5 bottom-35 left-[50%] -translate-x-1/2 opacity-20 animate-my-pulse"
+          class="absolute flex flex-col items-center gap-0.5 bottom-30 left-[50%] -translate-x-1/2 opacity-20 animate-my-pulse"
         >
           <p class="text-[0.95rem] italic">Scroll</p>
           <img src="images/arrow-down-circle-line.svg" class="size-4" />
@@ -68,7 +68,7 @@
         class="size-30 bg-[#4a90e2] rounded-full absolute -top-10 -left-10 blur-3xl opacity-40"
       ></div>
       <div
-        class="size-50 bg-[#4a90e2] rounded-full absolute bottom-3 -right-20 blur-3xl opacity-25"
+        class="size-50 bg-[#4a90e2] rounded-full absolute bottom-3 -right-20 blur-3xl opacity-25 overflow-hidden"
       ></div>
     </section>
   </body>
