Update Hero Section

--- a/index.html
+++ b/index.html
@@ -56,12 +56,10 @@
       </main>
 
       <footer>
-        <div
-          class="absolute flex flex-col items-center gap-0.5 bottom-30 left-[50%] -translate-x-1/2 opacity-20 animate-my-pulse"
-        >
-          <p class="text-[0.95rem] italic">Scroll</p>
-          <img src="images/arrow-down-circle-line.svg" class="size-4" />
-        </div>
+        <img
+          src="images/arrow-down-line.svg"
+          class="absolute size-5 bottom-30 left-[50%] -translate-x-1/2 opacity-10 animate-my-bounce"
+        />
       </footer>
 
       <div
