Update Hero section

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <p class="font-content font-light mb-5 text-[0.9rem]">Hello! I'm</p>
 
         <p
-          class="font-title font-black text-[2.2rem] text-[#4a90e2] tracking-wider mb-1.5 text-shadow-md/30 text-shadow-[#4a90e2]"
+          class="font-title font-black text-[2.5rem] text-[#4a90e2] tracking-wider mb-1.5 text-shadow-md/30 text-shadow-[#4a90e2]"
         >
           STEFAN IACOB
         </p>
@@ -43,7 +43,7 @@
 
       <main>
         <p
-          class="font-content font-medium text-[0.9rem] mb-12 tracking-wide leading-[1.7rem]"
+          class="font-content font-medium w-70 text-[0.9rem] mb-12 tracking-wide leading-[1.7rem]"
         >
           I build modern, responsive and clean web interfaces.
         </p>
