--- a/index.html
+++ b/index.html
@@ -17,53 +17,151 @@
   </head>
 
   <body
-    class="bg-[#1e1e1e] text-amber-50 bg-linear-to-br from-[#4a90e2]/15 to-[#1e1e1e]"
+    class="relative bg-[#1e1e1e] text-amber-50 bg-linear-to-br from-[#4a90e2]/15 to-[#1e1e1e] overflow-scroll"
   >
-    <!--HERO SECTION-->
-    <section class="h-screen w-screen">
-      <header class="h-15 w-screen">
-        <nav class="">
-          <button id="menu--button" class="absolute z-50 top-5 right-5">
-            <img id="menu--icon" alt="Menu Icon" class="size-5.5" />
+    <!-- Portfolio HEADER Section -->
+    <header
+      class="fixed z-40 h-15 w-dvw top-0 left-0 right-0 bg-[#1e1e1e] bg-linear-to-br from-[#4a90e2]/15 to-[#1e1e1e]"
+    >
+      <nav>
+        <button id="menu--button" class="absolute z-50 top-4.5 right-5">
+          <img id="menu--icon" alt="Menu Icon" class="size-5.5" />
+        </button>
+      </nav>
+    </header>
+
+    <!-- MOBILE VERSION Menu window -->
+    <section
+      id="mobile--menu"
+      class="fixed z-50 top-0 left-0 px-6 py-4.5 w-dvw h-dvh bg-[#1e1e1e] bg-linear-to-br from-[#4a90e2]/15 to-[#1e1e1e] scale-x-0 origin-left transition-all duration-300"
+    >
+      <main class="flex flex-col gap-20">
+        <!-- Close Button -->
+        <button id="menu--close" class="self-end">
+          <img id="menu--close--icon" alt="Close Menu" class="size-6.5" />
+        </button>
+
+        <!-- Links -->
+        <section class="font-content text-[1.7rem] leading-20 pr-5">
+          <ul>
+            <li>
+              <a href="#" class="flex justify-between items-center">
+                <p>About Me</p>
+                <img class="menu-arrow-right size-6.5" />
+              </a>
+            </li>
+
+            <li>
+              <a href="#" class="flex justify-between items-center">
+                <p>Projects</p>
+                <img class="menu-arrow-right size-6.5" />
+              </a>
+            </li>
+
+            <li>
+              <a href="#" class="flex justify-between items-center">
+                <p>Tech Stack</p>
+                <img class="menu-arrow-right size-6.5" />
+              </a>
+            </li>
+
+            <li>
+              <a href="#" class="flex justify-between items-center">
+                <p>Contact</p>
+                <img class="menu-arrow-right size-6.5" />
+              </a>
+            </li>
+          </ul>
+        </section>
+
+        <!-- Resume Download Button -->
+        <section class="flex gap-5 items-center">
+          <button
+            id="projects--button"
+            class="self-start font-title font-light text-[0.9rem] text-[#6da1de] border-solid border-[0.1rem] border-[#4a90e2] py-2.5 px-3 rounded-3xl cursor-pointer"
+          >
+            Resume
           </button>
-        </nav>
-      </header>
 
-      <main class="px-5">
-        <article>
-          <header class="mb-22 mt-10">
-            <p class="font-content font-light mb-5 text-[0.9rem]">Hello! I'm</p>
+          <p class="italic text-[0.6rem] text-white/20">
+            * Resume can be downloaded in ".pdf" format!
+          </p>
+        </section>
 
-            <p
-              class="font-title font-black text-[2.5rem] text-[#4a90e2] tracking-wider mb-1.5 text-shadow-md/30 text-shadow-[#4a90e2]"
+        <!-- Social Media Buttons -->
+        <section class="flex gap-5 border-t border-t-white/15 py-6">
+          <button>
+            <a href="https://github.com/StefanIacob14" target="_blank">
+              <img id="github--btn" alt="GitHub" class="size-7.5" />
+            </a>
+          </button>
+
+          <button>
+            <a
+              href="https://www.linkedin.com/in/stefan-bogdan-iacob-512ba5222/"
+              target="_blank"
             >
-              STEFAN IACOB
-            </p>
-
-            <p
-              class="font-content font-medium text-[1.1rem] text-[#4a90e2] text-shadow-md/30 text-shadow-[#4a90e2]"
-            >
-              Front-End Developer
-            </p>
-          </header>
-
-          <section>
-            <p
-              class="font-content font-medium w-70 text-[0.9rem] mb-20 tracking-wide leading-[1.7rem]"
-            >
-              I build modern, responsive and clean web interfaces.
-            </p>
-
-            <button
-              id="projects--button"
-              class="font-title font-light text-[0.75rem] text-[#6da1de] border-solid border-[0.1rem] border-[#4a90e2] p-2.5 rounded-3xl cursor-pointer"
-            >
-              View My Work
-            </button>
-          </section>
-        </article>
+              <img id="linkedin--btn" alt="LinkedIn" class="size-7.5" />
+            </a>
+          </button>
+        </section>
       </main>
     </section>
+
+    <!-- Portfolio MAIN Section -->
+    <main class="flex flex-col flex-1">
+      <!-- "HERO" SECTION -->
+      <section class="h-screen w-screen mt-15 bg-green-400">
+        <main class="px-5">
+          <article>
+            <header class="mb-22 mt-25">
+              <p class="font-content font-light mb-5 text-[0.9rem]">
+                Hello! I'm
+              </p>
+
+              <p
+                class="font-title font-black text-[2.5rem] text-[#4a90e2] tracking-wider mb-1.5 text-shadow-md/30 text-shadow-[#4a90e2]"
+              >
+                STEFAN IACOB
+              </p>
+
+              <p
+                class="font-content font-medium text-[1.1rem] text-[#4a90e2] text-shadow-md/30 text-shadow-[#4a90e2]"
+              >
+                Front-End Developer
+              </p>
+            </header>
+
+            <section>
+              <p
+                class="font-content font-medium w-70 text-[0.9rem] mb-20 tracking-wide leading-[1.7rem]"
+              >
+                I build modern, responsive and clean web interfaces.
+              </p>
+
+              <button
+                id="projects--button"
+                class="font-title font-light text-[0.8rem] text-[#6da1de] border-solid border-[0.1rem] border-[#4a90e2] p-2.5 rounded-3xl cursor-pointer"
+              >
+                View My Work
+              </button>
+            </section>
+          </article>
+        </main>
+      </section>
+
+      <!-- "ABOUT ME" SECTION -->
+      <section class="w-screen h-screen bg-red-400"></section>
+
+      <!-- "PROJECTS" SECTION -->
+      <section class="w-screen h-screen bg-blue-400"></section>
+
+      <!-- "TECH STACK" SECTION -->
+      <section class="w-screen h-screen bg-fuchsia-400"></section>
+
+      <!-- "CONTACT" SECTION -->
+      <section class="w-screen h-screen bg-orange-400"></section>
+    </main>
 
     <script type="module" src="/src/main.js"></script>
   </body>
