Update mobile screen menu

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       id="mobile--menu"
       class="fixed z-50 top-0 left-0 px-6 py-4.5 w-dvw h-dvh bg-[#1e1e1e] bg-linear-to-br from-[#4a90e2]/15 to-[#1e1e1e] scale-x-0 origin-left transition-all duration-300"
     >
-      <main class="flex flex-col gap-20">
+      <main class="flex flex-col gap-15">
         <!-- Close Button -->
         <button id="menu--close" class="self-end">
           <img id="menu--close--icon" alt="Close Menu" class="size-6.5" />
@@ -111,7 +111,7 @@
     <!-- Portfolio MAIN Section -->
     <main class="flex flex-col flex-1">
       <!-- "HERO" SECTION -->
-      <section class="h-screen w-screen mt-15 bg-green-400">
+      <section class="h-dvh w-dvw mt-15 bg-green-400">
         <main class="px-5">
           <article>
             <header class="mb-22 mt-25">
@@ -151,16 +151,16 @@
       </section>
 
       <!-- "ABOUT ME" SECTION -->
-      <section class="w-screen h-screen bg-red-400"></section>
+      <section class="h-dvh w-dvw bg-red-400"></section>
 
       <!-- "PROJECTS" SECTION -->
-      <section class="w-screen h-screen bg-blue-400"></section>
+      <section class="h-dvh w-dvw bg-blue-400"></section>
 
       <!-- "TECH STACK" SECTION -->
-      <section class="w-screen h-screen bg-fuchsia-400"></section>
+      <section class="h-dvh w-dvw bg-fuchsia-400"></section>
 
       <!-- "CONTACT" SECTION -->
-      <section class="w-screen h-screen bg-orange-400"></section>
+      <section class="h-dvh w-dvw bg-orange-400"></section>
     </main>
 
     <script type="module" src="/src/main.js"></script>
